--- a/public/css/main.css
+++ b/public/css/main.css
@@ -45,8 +45,14 @@ textarea:focus, input:focus {
 .header {
 	background-color: black;
 	height: 50px;
-	text-align: center;
+	text-align: left;
 	color: white;
+	padding-left: 10px;
+}
+
+.header h3 {
+	margin-top: 10px;
+	padding-bottom: 25px;
 }
 
 /************* Layout **************
@@ -72,6 +78,23 @@ textarea:focus, input:focus {
 
 /********** Home Page **************
 ***********************************/
+.header-button {
+	position: absolute;
+	right: 10px;
+	top: 10px;
+	margin: 0;
+	padding: 5px;
+	background-color: purple;
+	color:white;
+	border: 0;
+	border-radius: 5px;
+}
+
+.header-button:hover {
+	background-color: white;
+	color:purple;
+}
+
 .hero {
 	height: 100vh;
 	width: 100%;
@@ -198,6 +221,11 @@ textarea:focus, input:focus {
 	text-align: center;
 	padding: 50px 0;
 	background-color: rgba(0, 0, 0, .3);
+}
+
+.calendar-wrapper>h2 {
+	margin-bottom: 25px;
+	color: white;
 }
 
 .fc-day:hover{
